--- a/OrangeSpeedReader/res/values/strings.xml
+++ b/OrangeSpeedReader/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="app_name">Orange Speed Reader</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_word_player">WordPlayerActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 
 </resources>
