main grid view as intended
Got the grid view working with custom buttons made from a LinearLayout.
Had fun trying to get this to work turns out there was an error in the
XML for the layout. The buttons contain an image with text below. 
The exit button now works.

--- a/OrangeSpeedReader/res/values/strings.xml
+++ b/OrangeSpeedReader/res/values/strings.xml
@@ -7,5 +7,10 @@
     <string name="title_activity_word_player">WordPlayerActivity</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="percentage_bar">%</string>
+    <string name="words_per_minute">250</string>
+    <string name="pages">200/21256</string>
+    <string name="read">Read</string>
+    <string name="title_activity_btn_box">BtnBox</string>
 
 </resources>
