--- a/aFileChooser/res/values-v11/strings.xml
+++ b/aFileChooser/res/values-v11/strings.xml
@@ -17,6 +17,5 @@
 <resources>
     <string name="empty_directory">Empty Directory</string>
     <string name="storage_removed">Storage was removed or unmounted.</string>
-    <string name="choose_file">Select a file</string>
-    <string name="error_selecting_file">Error selecting File</string>    
+    <string name="choose_file">Choose a file</string>    
 </resources>
