After much hacking words are playing
The words are now streaming and some preliminary work has been done on
making sure the thing stops streaming when the activity has left the
screen

--- a/OrangeSpeedReader/res/values/strings.xml
+++ b/OrangeSpeedReader/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="read">Read</string>
     <string name="title_activity_btn_box">BtnBox</string>
     <string name="title_activity_file_chooser">FileChooser</string>
-	
+    <string name="title_activity_player">PlayerActivity</string>
+
 </resources>
