Add working recent books listview
the recent books now brings up a list of the opened books, this list is
gathered from the shared prefrences stored when a book is opened from the
FileChooser the slot is saved and incremented so as to add another book,
and the saved flag is toggled so as to not add multiples of the same. The
books are displayed as a file path.

--- a/OrangeSpeedReader/res/values/strings.xml
+++ b/OrangeSpeedReader/res/values/strings.xml
@@ -14,5 +14,7 @@
     <string name="title_activity_btn_box">BtnBox</string>
     <string name="title_activity_file_chooser">FileChooser</string>
     <string name="title_activity_player">PlayerActivity</string>
+    <string name="title_activity_recent_books">RecentBooksActivity</string>
+    <string name="title_activity_about">AboutActivity</string>
 
 </resources>
