--- a/OrangeSpeedReader/res/values/strings.xml
+++ b/OrangeSpeedReader/res/values/strings.xml
@@ -2,7 +2,10 @@
 <resources>
 
     <string name="app_name">Orange Speed Reader</string>
+    
     <string name="action_settings">Settings</string>
+    <string name="help">Help</string>
+
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_word_player">WordPlayerActivity</string>
     <string name="dummy_button">Dummy Button</string>
@@ -16,5 +19,6 @@
     <string name="title_activity_player">PlayerActivity</string>
     <string name="title_activity_recent_books">RecentBooksActivity</string>
     <string name="title_activity_about">AboutActivity</string>
+    <string name="title_activity_help">HelpActivity</string>
 
 </resources>
